# edgar

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig
Documento/: analisis.aux  bibliografia.bib  bibliografia.bib.blg  doble_propulsor.aux  doble_propulsor.tex  edgar.aux  edgar.bbl  edgar.bcf  edgar.blg  edgar.lof  edgar.lot  edgar.out  edgar.run.xml  edgar.tex  edgar.tex.blg  edgar.toc  latex.blg  metodologia.aux  metodologia.tex  objetivos.aux  objetivos.tex  (+2 more)
Programa/: CMakeLists.txt
Programa/doc/img/: arc1.dia  arc1.dia~
Programa/src/: CMakeLists.txt  bluetooth.cpp  bluetooth.h  button.h  command_selector.h  communication_driver.h  differential.cpp  differential.h  direction.h  gpio.cpp  gpio.h  gpioHandler.cpp  gpioHandler.h  main.cpp  mobile_robot.cpp  mobile_robot.h  motor.h  motorDc.cpp  motorDc.h  power_train.h  push.cpp  push.h  pwm.cpp  pwm.h  robot.cpp  robot.h  robotController.cpp  robotController.h  serial.cpp  serial.h  timer.h  timer_delay.cpp  timer_delay.h
Programa/tests/: CMakeLists.txt  test_CommunicationDriver.cpp  test_bluetooth.cpp  test_button.cpp  test_communicationController.cpp  test_differential.cpp  test_gpioHandler.cpp  test_mobile_robot.cpp  test_motorDc.cpp  test_pwm.cpp  test_robot.cpp  test_robotController.cpp  test_serial.cpp  test_timerDelay.cpp
Programa/tests/avr/: io.cpp  io.h
Programa/tests/util/: delay.h
components/dynamic_controller/: CMakeLists.txt  dynamic_controller.c
components/dynamic_controller/differential/: project.yml
components/dynamic_controller/differential/include/: differential.h
components/dynamic_controller/differential/src/: differential.c
components/dynamic_controller/differential/test/: pwm.h  test_differential-wheel.c  test_differential.c  tick_counter.h
components/dynamic_controller/encoder/include/: encoder.h
components/dynamic_controller/encoder/src/: encoder.c
components/dynamic_controller/include/: dynamic_controller.h  speeds.h
components/dynamic_controller/motor/include/: motor.h
components/dynamic_controller/motor/src/: motor.c
components/dynamic_controller/pid/: project.yml
components/dynamic_controller/pid/include/: .pid.h.swp  pid.h
components/dynamic_controller/pid/src/: .pid.c.swp  pid.c
components/dynamic_controller/pid/test/: test_pid.c
components/dynamic_controller/pwm/include/: pwm.h
components/dynamic_controller/pwm/src/: pwm.c
components/dynamic_controller/tick_counter/include/: tick_counter.h
components/dynamic_controller/tick_counter/src/: tick_counter.c
components/dynamic_controller/wheel/: project.yml
components/dynamic_controller/wheel/include/: wheel.h
components/dynamic_controller/wheel/src/: wheel.c
components/dynamic_controller/wheel/test/: encoder.h  pwm.h  test_wheel.c
(+110 files in other folders)
