project (Edgar)

include_directories(../tests)
#add_executable(edgar ./main.c)
add_library(mobile_robot ./mobile_robot.cpp)
add_library(differential ./differential.cpp)
add_library(push ./push.cpp)
add_library(motor ./motorDc.cpp)
add_library(timer ./timer_delay.cpp)
add_library(gpio ./gpio.cpp)
add_library(pwm ./pwm.cpp)
add_library(serial serial.cpp)
add_library(bluetooth bluetooth.cpp)
add_library(robotController robotController.cpp)
